Avoid page content shift to left when vertical scrollbar

--- a/web-frontend/src/scss/buttons.scss
+++ b/web-frontend/src/scss/buttons.scss
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 .rounded-circle {
   @extend .rounded-circle;
 
